fixed horizontal scroll bar

--- a/blog_style3.css
+++ b/blog_style3.css
@@ -663,4 +663,10 @@ p{
     margin: 0;
 }
 
+.complete{
+         width: 100%;
+     }
+
+
+
 
